--- a/src/main/resources/assets/better_skills/lang/en_us.json
+++ b/src/main/resources/assets/better_skills/lang/en_us.json
@@ -1,43 +1,83 @@
 {
-  "advancements.mining_6.title": "Mining 6",
+  "advancements.combat_11.descr": "reach 14925 xp",
   "advancements.mining_8.descr": "reach 4425 xp",
   "advancements.mining_18.descr": "reach 222425 xp",
-  "advancements.mining_3.descr": "reach 375 xp",
   "advancements.mining_11.descr": "reach 14925 xp",
-  "advancements.mining_13.descr": "Reach 32425 xp",
-  "advancements.mining_16.title": "Mining 16",
+  "advancements.combat_18.descr": "reach 222425 xp",
+  "advancements.combat_4.descr": "reach 675 xp",
+  "advancements.combat.descr": "reach 50 xp",
+  "advancements.combat_14.title": "Combat 14",
   "advancements.mining_1.title": "Mining 1",
-  "advancements.mining_16.descr": "reach 97425 xp",
-  "advancements.mining_3.title": "Mining 3",
-  "advancements.mining_13.title": "Mining 13",
-  "advancements.mining_15.descr": "reach 67425 xp",
-  "advancements.mining_12.title": "Mining 12",
+  "advancements.mining_15.descr": "reach 67425 xp, haste 3",
+  "advancements.combat_18.title": "Combat 18",
   "advancements.mining_18.title": "Mining 18",
   "advancements.mining_8.title": "Mining 8",
+  "advancements.combat_7.title": "Combat 7",
   "advancements.mining_1.descr": "reach 50 xp",
-  "advancements.mining_20.descr": "reach 522425 xp",
+  "advancements.combat_7.descr": "reach 2925 xp",
+  "advancements.combat_4.title": "Combat 4",
   "advancements.mining_15.title": "Mining 15",
   "advancements.mining_20.title": "Mining 20",
-  "advancements.mining_6.descr": "reach 1925 xp",
-  "advancements.mining_10.descr": "reach 9925 xp",
-  "advancements.mining_12.descr": "reach 22425 xp",
+  "advancements.combat_15.descr": "reach 67425 xp",
   "advancements.mining_10.title": "Mining 10",
   "advancements.mining_9.descr": "reach 9425 xp",
+  "advancements.combat_12.descr": "reach 22425 xp",
+  "advancements.combat_15.title": "Combat 15",
+  "advancements.combat_20.title": "Combat 20",
   "advancements.mining_17.descr": "reach 147425 xp",
+  "advancements.combat_17.title": "Combat 17",
+  "advancements.mining_19.title": "Mining 19",
+  "advancements.combat.title": "Combat 1",
+  "advancements.mining_4.title": "Mining 4",
+  "advancements.combat_5.title": "Combat 5",
+  "advancements.mining_5.descr": "reach 1175 xp, haste 1",
+  "advancements.combat_19.descr": "reach 322425 xp",
+  "advancements.combat_3.descr": "reach 375 xp",
+  "advancements.mining_2.descr": "reach 175 xp",
+  "advancements.mining_14.descr": "Reach 47425 xp",
+  "advancements.mining_7.title": "Mining 7",
+  "advancements.combat_8.title": "Combat 8",
+  "advancements.combat_11.title": "Combat 11",
+  "advancements.mining_6.title": "Mining 6",
+  "advancements.combat_9.title": "Combat 9",
+  "advancements.mining_3.descr": "reach 375 xp",
+  "advancements.combat_6.descr": "reach 1925 xp",
+  "advancements.mining_13.descr": "Reach 32425 xp",
+  "advancements.mining_16.title": "Mining 16",
+  "advancements.combat_16.descr": "reach 97425 xp",
+  "advancements.combat_2.title": "Combat 2",
+  "advancements.combat_13.descr": "Reach 32425 xp",
+  "advancements.combat_9.descr": "reach 9425 xp",
+  "advancements.mining_16.descr": "reach 97425 xp",
+  "advancements.mining_3.title": "Mining 3",
+  "advancements.combat_12.title": "Combat 12",
+  "advancements.mining_13.title": "Mining 13",
+  "advancements.combat_2.descr": "reach 175 xp",
+  "advancements.mining_12.title": "Mining 12",
+  "advancements.mining_20.descr": "reach 522425 xp, haste 4",
+  "advancements.combat_10.descr": "reach 9925 xp",
+  "advancements.mining_6.descr": "reach 1925 xp",
+  "advancements.mining_10.descr": "reach 9925 xp, haste 2",
+  "advancements.combat_20.descr": "reach 522425 xp",
+  "advancements.mining_12.descr": "reach 22425 xp",
+  "advancements.combat_3.title": "Combat 3",
+  "advancements.combat_10.title": "Combat 10",
   "key.better_skills.skills_menu": "Open the Skill Menu",
+  "advancements.combat_13.title": "Combat 13",
   "advancements.mining_5.title": "Mining 5",
   "advancements.mining_17.title": "Mining 17",
+  "advancements.combat_17.descr": "reach 147425 xp",
   "advancements.mining_4.descr": "reach 675 xp",
+  "advancements.combat_5.descr": "reach 1175 xp",
+  "advancements.combat_6.title": "Combat 6",
   "advancements.mining_9.title": "Mining 9",
-  "advancements.mining_19.title": "Mining 19",
-  "advancements.mining_4.title": "Mining 4",
-  "advancements.mining_5.descr": "reach 1175 xp",
+  "advancements.combat_8.descr": "reach 4425 xp",
+  "advancements.combat_14.descr": "Reach 47425 xp",
+  "advancements.combat_19.title": "Combat 19",
   "advancements.mining_7.descr": "reach 2925 xp",
   "advancements.mining_14.title": "Mining 14",
   "advancements.mining_2.title": "Mining 2",
   "advancements.mining_11.title": "Mining 11",
-  "advancements.mining_19.descr": "reach 322425 xp",
-  "advancements.mining_2.descr": "reach 175 xp",
-  "advancements.mining_14.descr": "Reach 47425 xp",
-  "advancements.mining_7.title": "Mining 7"
+  "advancements.combat_16.title": "Combat 16",
+  "advancements.mining_19.descr": "reach 322425 xp"
 }
