--- a/src/main/resources/assets/better_skills/lang/en_us.json
+++ b/src/main/resources/assets/better_skills/lang/en_us.json
@@ -52,6 +52,7 @@
   "advancements.mining_11.title": "Mining 11",
   "advancements.combat_16.title": "Combat 16",
   "advancements.mining_19.descr": "reach 322425 xp",
+  "item.better_skills.wateringcan": "Watering can",
   "advancements.mining_8.descr": "reach 4425 xp",
   "advancements.farming_4.descr": "reach 675 xp",
   "advancements.farming_16.descr": "reach 97425 xp",
