--- a/src/main/resources/assets/better_skills/lang/en_us.json
+++ b/src/main/resources/assets/better_skills/lang/en_us.json
@@ -26,7 +26,7 @@
   "advancements.combat.title": "Combat 1",
   "advancements.foraging_12.title": "Foraging 12",
   "advancements.combat_19.descr": "reach 322425 xp",
-  "advancements.foraging_10.descr": "reach 9925 xp",
+  "advancements.foraging_10.descr": "reach 9925 xp, break trees when you break the botom block up to 11 blocks",
   "advancements.foraging_20.title": "Foraging 20",
   "advancements.combat_3.descr": "reach 375 xp",
   "advancements.farming_11.title": "Farming 11",
