--- a/src/main/resources/assets/betterskills/lang/en_us.json
+++ b/src/main/resources/assets/betterskills/lang/en_us.json
@@ -47,6 +47,7 @@
   "advancements.farming_17.descr": "reach 147425 xp",
   "advancements.combat_8.descr": "reach 4425 xp",
   "advancements.foraging_15.descr": "Reach 67425 xp",
+  "gui.betterskills.skills.label_mining": "Mining",
   "advancements.fishing_4.title": "Fishing 4",
   "advancements.combat_16.title": "Combat 16",
   "advancements.mining_19.descr": "reach 322425 xp",
@@ -109,6 +110,7 @@
   "advancements.fishing_17.title": "Fishing 17",
   "advancements.fishing_12.descr": "Reach 22425 xp",
   "advancements.mining_14.title": "Mining 14",
+  "gui.betterskills.skills.label_foraging": "Foraging",
   "advancements.fishing_2.descr": "reach 175 xp",
   "advancements.fishing_7.title": "Fishing 7",
   "advancements.farming_7.title": "Farming 7",
@@ -149,12 +151,14 @@
   "advancements.mining_6.descr": "reach 1925 xp",
   "advancements.foraging_3.descr": "reach 375 xp",
   "advancements.fishing_3.title": "Fishing 3",
+  "gui.betterskills.skills.label_fishing": "Fishing",
   "advancements.farming_1.title": "Farming",
   "gui.betterskills.skills.label_fishing_varfishinglvl": "Fishing \u003cVAR:FishingLvL\u003e",
   "advancements.fishing_20.descr": "Reach 522425 xp",
   "advancements.foraging_4.descr": "reach 675 xp",
   "advancements.farming_10.title": "Farming 10",
   "advancements.foraging_14.title": "Foraging 14",
+  "gui.betterskills.skills.label_combat": "Combat",
   "advancements.farming_8.title": "Farming 8",
   "advancements.mining_17.title": "Mining 17",
   "advancements.combat_17.descr": "reach 147425 xp",
@@ -214,6 +218,7 @@
   "advancements.fishing_9.descr": "reach 9425 xp",
   "advancements.fishing_11.title": "Fishing 11",
   "gui.betterskills.skills.label_foraging_varforaginglvl": "Foraging \u003cVAR:ForagingLvl\u003e",
+  "gui.betterskills.skills.label_farming": "Farming",
   "advancements.combat_5.descr": "reach 1175 xp",
   "advancements.farming_14.descr": "Reach 47425 xp",
   "advancements.combat_14.descr": "Reach 47425 xp",
